# kucoin_api

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/rust.yml/: rust.yml
src/: client.rs  error.rs  lib.rs  margin.rs  market.rs  trade.rs  user.rs  utils.rs  websocket.rs
src/model/: market.rs  mod.rs  websocket.rs
src/model/parameters/: klines.rs  mod.rs  symbol.rs
src/model/request/market/: mod.rs
src/old-bin/kucoin-client/: main.rs  market.rs  websocket.rs
